...
        />
        <CharacteristicsSection
          height={_details.height}
          weight={_details.weight}
        />
        <EvolutionSection
          title="Evolution Chain"
          evolutionChain={_details.evolutionChain}
        />
        <StatsSection title="Stats" stats={_details.stats} />
      </ScrollView>
    </GradientBackground>
  )
})

const styles = StyleSheet.create({
...
